--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -170,6 +170,7 @@ UCI_LimitStrength=UCI_LimitStrength
 UCI_Elo=UCI_Elo
 Elo Lower (H\1)=Elo Lower (H\1)
 Elo Upper (H\1)=Elo Upper (H\1)
+##filePath#####filePath=##filePath#####filePath
 
 [Translation]
 id=Option
@@ -319,6 +320,10 @@ Auto-detect engine capabilities and supported options=Auto-detect engine capabil
 Save tournament configuration and results to file=Save tournament configuration and results to file
 Load tournament configuration and results from file=Load tournament configuration and results from file
 Stop tournament immediately, aborting running games=Stop tournament immediately, aborting running games
+Number of plies to play from position before starting engine analysis=Number of plies to play from position before starting engine analysis
+Minimum analysis time per position in seconds=Minimum analysis time per position in seconds
+Maximum analysis time per position in seconds=Maximum analysis time per position in seconds
+Path to EPD or RAW position file to analyze=Path to EPD or RAW position file to analyze
 
 [Translation]
 id=Tab
